# 19th-FitCal

./: .dockerignore  .env  .env-example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
carts/: context_processors.py  forms.py  models.py  urls.py  views.py
carts/migrations/: 0002_alter_cart_member.py  0002_alter_cart_unique_together_and_more.py  0003_alter_cart_member.py  0003_remove_cart_total_price.py
chatbot/: apps.py  fetcher.py  models.py  urls.py  views.py
chatbot/knowledge/: Introduction.txt
chatbot/migrations/: 0001_initial.py
common/: decorator.py
docker/: Dockerfile  entrypoint.sh  step.md
docker/nginx/: default.conf
fitcal/: celery.py  settings.py  urls.py
geocoding_function/: creat_data.py
locations/: models.py  urls.py  views.py
locations/migrations/: 0001_initial.py
members/: admin.py  forms.py  models.py  urls.py  views.py
members/migrations/: 0003_collection_member_favorite_products_and_more.py  0004_favorite_member_favorite.py  0004_member_name_member_user_alter_member_date_of_birth.py  0004_member_store.py  (+10 more)
middleware/: block_merchant_cart.py
orders/: admin.py  enums.py  forms.py  fsm.py  models.py  services.py  signals.py  tasks.py  urls.py  utils.py  views.py
pages/: urls.py  views.py
payment/: urls.py  views.py
product/: forms.py  models.py  views.py
products/: forms.py  models.py  urls.py  views.py
search/: urls.py  views.py
stores/: admin.py  forms.py  models.py  urls.py  views.py
templates/: 404.html
uploads/: my_file_mFdTBo6.txt
users/: adapters.py  form.py  forms.py  models.py  urls.py  validators.py  views.py
(+190 files in other folders)
