[project]
name = "fitcal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "boto3>=1.38.15",
    "django>=5.2",
    "django-allauth[socialaccount]>=65.7.0",
    "django-environ>=0.12.0",
    "email-validator>=2.2.0",
    "django-storages>=1.14.6",
    "pillow>=11.2.1",
    "openai>=1.79.0",
    "google-generativeai",
    "vertexai",
    "geopy>=2.4.1",
    "psycopg[binary]>=3.2.7",
    "django-widget-tweaks>=1.5.0",
    "celery>=5.5.2",
    "redis>=6.2.0",
    "django-anymail[mailgun]>=13.0",
    "gdal>=3.10.2",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.0",
    "ruff>=0.11.8",
    "django-debug-toolbar>=5.2.0",
    "whitenoise>=6.9.0",
]

[tool.uv.sources]
gdal = [
  { index = "gdal-wheels", marker = "sys_platform == 'linux'" },
  { index = "geospatial_wheels", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "geospatial_wheels"
url = "https://nathanjmcdougall.github.io/geospatial-wheels-index/"
explicit = true

[[tool.uv.index]]
name = "gdal-wheels"
url = "https://gitlab.com/api/v4/projects/61637378/packages/pypi/simple"
explicit = true

# ruff設定
[tool.ruff]
# 啟用基本錯誤檢查與 import 排序
select = ["E", "F", "I"]
# 可略過某些資料夾（例如虛擬環境）
exclude = ["venv", ".venv", "__pycache__", "migrations"]
# 行寬與 Python 目標版本
line-length = 88
target-version = "py311"
# 自動修復違規（包含格式與排序）
fix = true

[tool.ruff.format]
# 使用單引號
quote-style = "single"
# 換行符號
line-ending = "lf"

[tool.ruff.isort]
# 排序 import 時合併 as 語法
combine-as-imports = true
